--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@1,300&family=Oswald:wght@300&display=swap');
 body {
-    font-family: Arial;
+    font-family: Lato, sans-serif;
+    font-weight:300;
 }
