--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -42,3 +42,10 @@ h1, h2 {
 .active {
     border-bottom: 1px solid #3a3a3a;
 }
+/* hero image*/
+
+#hero-image {
+    height: 600px;
+    width: 100%;
+    background: url('/workspace/love-running/assets/images/hero-image.webp')
+}
