--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -44,8 +44,57 @@ h1, h2 {
 }
 /* hero image*/
 
+#hero-outer {
+    height: 600px;
+    width: 100%;
+    overflow: hidden;
+    
+    position: relative;
+}
+
+#cover-text, #cover text h2 {
+    color: #fff;
+}
+
 #hero-image {
     height: 600px;
     width: 100%;
-    background: url('/workspace/love-running/assets/images/hero-image.webp')
+    background: url('../images/hero-image.webp') no-repeat center center;
+
+    /*animates zoom effect on loading page*/
+    animation-name: hero-zoom;
+    animation-duration: 5s;
+    animation-fill-mode: forwards;
 }
+
+/* creates the level of zoom for hero image*/
+@keyframes hero-zoom {
+    from{
+        transform: scale(1);
+
+    }
+    to{
+        transform: scale(1.1);
+    }
+}
+
+#cover-text {
+    font-size: 130%;
+    font-weight: Oswald, sans-serif;
+    text-transform: uppercase;
+    letter-spacing: 4px;
+
+    width: 300px;
+    height: 200px;
+
+    padding-top: 40px;
+    padding-left: 10px;
+
+    background-color: rgba(241, 109, .7);
+
+    bottom: 30px;
+    right: 150px;
+
+    position: absolute;
+}
+
