--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,6 +15,7 @@ h1, h2 {
 #logo {
     float: left;
     font-size: 280%;
+    margin-left: 30px;
 }
 
 #menu, #logo {
@@ -48,11 +49,11 @@ h1, h2 {
     height: 600px;
     width: 100%;
     overflow: hidden;
-    
+
     position: relative;
 }
 
-#cover-text, #cover text h2 {
+#cover-text, #cover-text h2 {
     color: #fff;
 }
 
@@ -90,7 +91,7 @@ h1, h2 {
     padding-top: 40px;
     padding-left: 10px;
 
-    background-color: rgba(241, 109, .7);
+    background-color: rgba(241, 109, 107, .7);
 
     bottom: 30px;
     right: 150px;
@@ -98,3 +99,26 @@ h1, h2 {
     position: absolute;
 }
 
+/*club ethos*/
+#club-ethos {
+    height: 600px;
+}
+
+#left-about {
+    padding-top: 30px;
+    width: 33%;
+    float: left;
+    background-color: blue;
+}
+
+#right-about {
+    padding-top: 30px;
+    width: 33%;
+    float: right;
+    background-color: silver;
+}
+#center-about {
+    width: 33%;
+    margin: 0 auto;
+    background-color: green;
+}
