--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -256,6 +256,12 @@ footer {
     hr {
         display: none;
     }
+    #times > div {
+        width: 100%;
+        clear: both;
+        height: 150%;
+        padding: 0;
+    }
     
 }
 
